--- a/www/list.html
+++ b/www/list.html
@@ -10,8 +10,8 @@
 <body>
     <h1>例题列表</h1>
     <section class="center print-hide">
-        <p>可将鼠标移至<span class="to-be-filled shown">填空处</span>查看参考答案</p>
-        <p>触屏设备可直接点击<span class="to-be-filled shown">填空处</span></p>
+        <p>可将鼠标移至<span class="to-be-filled">填空处</span>查看参考答案</p>
+        <p>触屏设备可直接点击<span class="to-be-filled">填空处</span></p>
         <p>也可以<a href="javascript:try_print();" class="button">直接打印</a>！</p>
         <noscript>
             <p>需要启用 JavaScript 以加载题目库、出题、编排列表。</p>
