--- a/www/index.html
+++ b/www/index.html
@@ -10,8 +10,8 @@
 <body>
     <main class="frontpage">
         <h1>会计分录编制模拟</h1>
-        <p><a href="list.html" class="button">列出全部示例题目</a></p>
-        <p>即将推出答题训练模式！</p>
+        <p><a href="exam.html" class="button">答题测试</a></p>
+        <p><a href="list.html" class="button">题目列表</a></p>
         <p>题目库正在赶工补充。敬请期待！</p>
         <p>请留意可能的有误题目，并报告、纠正。</p>
     </main>
