overhaul and fixes, enough quiz for practice

--- a/www/index.html
+++ b/www/index.html
@@ -10,10 +10,9 @@
 <body>
     <main class="frontpage">
         <h1>会计分录编制模拟</h1>
-        <p><a href="exam.html" class="button">答题测试</a></p>
-        <p><a href="list.html" class="button">题目列表</a></p>
-        <p>题目库正在赶工补充。敬请期待！</p>
-        <p>请留意可能的有误题目，并报告、纠正。</p>
+        <p><a href="list.html" class="button">修炼：题目列表</a></p>
+        <p><a href="exam.html" class="button">试炼：答题测试</a></p>
+        <p>提示：请留意可能的有误题目，并报告、纠正。</p>
     </main>
     <footer>
         <p>版权所有 © 2023 NaitLee。保留所有权利。</p>
