--- a/www/exam.html
+++ b/www/exam.html
@@ -14,6 +14,9 @@
             <p>所有 JavaScript 程序均以 <a href="https://directory.fsf.org/wiki/License:BSD-2-Clause-FreeBSD">FreeBSD 许可协议</a>发布，尊重您应得的<a href="https://www.gnu.org/philosophy/free-sw.html#content" target="_blank">计算自由</a>。</p>
         </noscript>
     </section>
+    <section id="selections">
+        <p>选择出题范围：</p>
+    </section>
     <section id="quiz"></section>
     <div class="center">
         <p>请作答</p>
